# renderers-html

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
nagare/renderers/: html5_base.py  html_base.py  xhtml5_base.py  xhtml_base.py
src/nagare/renderers/: html5_base.py  html_base.py  xhtml5_base.py  xhtml_base.py
tests/: test_absolute_url.py  test_global.py  test_head.py  test_html.py  test_html5.py  test_parse.py
