[metadata]
name = nagare-renderers-html
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Nagare HTML renderer
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/renderers-html
    Tracker = https://github.com/nagareproject/renderers-html/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-renderers-xml

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
